--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -17,5 +19,11 @@
     "typescript": "^5.2.2",
     "vite": "^5.4.21",
     "@vitejs/plugin-react": "^4.0.0"
+    ,"eslint": "^8.50.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "eslint-plugin-react": "^7.32.2"
+    ,"@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7"
   }
 }
