--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,21 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.4.0",
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.4.21",
-    "@vitejs/plugin-react": "^4.0.0"
-    ,"eslint": "^8.50.0",
-    "@typescript-eslint/parser": "^6.6.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "eslint-plugin-react": "^7.32.2"
-    ,"@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7"
+    "@typescript-eslint/parser": "^6.6.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.50.0",
+    "eslint-plugin-react": "^7.32.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.21"
   }
 }
