--- a/deploy/nginx_idcs.conf
+++ b/deploy/nginx_idcs.conf
@@ -5,6 +5,8 @@ server {
     server_name idcs.zynix.us db.zynix.us;
 
     client_max_body_size 50M;
+    keepalive_timeout 65;
+    send_timeout 60s;
 
     location /static/ {
         alias /home/iqac/IDCS-Restart/backend/staticfiles/;
@@ -31,6 +33,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://unix:/run/gunicorn.sock:;
+        proxy_http_version 1.1;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        proxy_buffering on;
+        proxy_buffers 16 16k;
+        proxy_busy_buffers_size 64k;
+        proxy_request_buffering on;
+        proxy_pass http://unix:/run/gunicorn/gunicorn.sock:;
     }
 }
