--- a/deploy/gunicorn.service
+++ b/deploy/gunicorn.service
@@ -5,15 +5,35 @@ After=network.target
 [Service]
 User=iqac
 Group=www-data
+UMask=0007
 WorkingDirectory=/home/iqac/IDCS-Restart/backend
 EnvironmentFile=/home/iqac/IDCS-Restart/backend/.env
+Environment=GUNICORN_WORKERS=9
+Environment=GUNICORN_THREADS=2
+Environment=GUNICORN_TIMEOUT=60
+Environment=GUNICORN_GRACEFUL_TIMEOUT=30
+Environment=GUNICORN_KEEPALIVE=5
+Environment=GUNICORN_MAX_REQUESTS=1500
+Environment=GUNICORN_MAX_REQUESTS_JITTER=150
 ExecStart=/home/iqac/IDCS-Restart/backend/.venv/bin/gunicorn \
-  --workers 3 \
-  --bind unix:/run/gunicorn.sock \
+  --worker-class gthread \
+  --workers ${GUNICORN_WORKERS} \
+  --threads ${GUNICORN_THREADS} \
+  --timeout ${GUNICORN_TIMEOUT} \
+  --graceful-timeout ${GUNICORN_GRACEFUL_TIMEOUT} \
+  --keep-alive ${GUNICORN_KEEPALIVE} \
+  --max-requests ${GUNICORN_MAX_REQUESTS} \
+  --max-requests-jitter ${GUNICORN_MAX_REQUESTS_JITTER} \
+  --worker-tmp-dir /dev/shm \
+  --bind unix:/run/gunicorn/gunicorn.sock \
+  --access-logfile - \
+  --error-logfile - \
   erp.wsgi:application
 
 Restart=always
 RestartSec=5
+TimeoutStartSec=120
+TimeoutStopSec=60
 LimitNOFILE=65536
 RuntimeDirectory=gunicorn
 RuntimeDirectoryMode=0755
